# zfs_space_visualizer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_and_upload_dev.sh  buildall.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  data.rs  main.rs  navigation.rs  sorting.rs  state.rs  theme.rs  update.rs  zfs.rs
src/ui/: mod.rs  utils.rs
