[package]
name = "zfs_space_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }
