[package]
name = "zfs_space_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }
